--- a/src/app/board/post-controls/post-controls.component.html
+++ b/src/app/board/post-controls/post-controls.component.html
@@ -13,7 +13,7 @@
         <span>Delete</span>
     </button>
 </span>
-<button class="btn btn-outline-secondary text-muted icon-button no-border-button" (click)="showCreateForm()">
+<button class="btn btn-outline-secondary text-muted icon-button no-border-button" (cmmClickIfAuth)="showCreateForm()">
     <i class="material-icons">reply</i>
     <span>Reply</span>
 </button>
