--- a/src/app/board/post/post.component.less
+++ b/src/app/board/post/post.component.less
@@ -1,12 +1,17 @@
 .post {
 
 
+
+    .post-main {
+        border-bottom: 1px solid rgba(0,0,0,0.1);
+    }
+
     .post-sidebar {
 
     }
 
     .post-content {
-
+        white-space: pre-wrap;
     }
 
     .post-extend {
