--- a/src/app/board/post/post.component.html
+++ b/src/app/board/post/post.component.html
@@ -1,15 +1,13 @@
 <article class="post my-3">
-    <div class="d-flex flex-row">
+    <div class="d-flex flex-row pb-2 post-main">
         <div class="post-sidebar">
             <cmm-user-label [user]="post.creator"
                             [date]="post.created">
             </cmm-user-label>
         </div>
         <div class="d-flex flex-column justify-content-between w-100">
-            <h4 *ngIf="title" class="px-3 mb-2">{{ title }}</h4>
-            <div class="post-content p-3">
-                {{ post.text }}
-            </div>
+            <h4 *ngIf="title" class="px-3 mb-2 mt-2">{{ title }}</h4>
+            <div class="post-content px-3 py-2" [innerHtml]="post.text | autoLinks"></div>
             <div class="post-controls px-3 py-1 d-flex flex-row">
                 <div class="align-self-start" *ngIf="post.numberOfChildren > 0 && !externalChildHandling">
                     <button class="btn btn-outline-primary icon-button no-border-button toggle-button" [class.open]="childrenVisible" (click)="toggleChildren()">
@@ -39,7 +37,7 @@
                        (close)="postEditClosed($event)">
         </cmm-post-edit>
     </div>
-    <div class="post-children pl-5" *ngIf="childrenVisible && post.numberOfChildren > 0 && !externalChildHandling">
+    <div class="post-children pl-5 ml-5" *ngIf="childrenVisible && post.numberOfChildren > 0 && !externalChildHandling">
         <cmm-post
             *ngFor="let childPost of children"
             [post]="childPost"
