--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,18 +1,30 @@
-
-<button (click)="socialLogin('google')">Login with Google</button><br>
-<button (click)="socialLogin('facebook')">Login with Facebook</button><br>
-<button (click)="socialLogin('twitter')">Login with Twitter</button><br>
-
-OR<br>
-
-<form (ngSubmit)="onSubmit()" [formGroup]="loginForm">
-    <div class="form-group">
-        <label for="loginUsername">Username</label>
-        <input id="loginUsername" type="text" placeholder="Username" formControlName="username">
+<h3 class="text-center mt-3">Log in</h3>
+<div class="narrow mx-auto">
+    <div class="d-flex flex-sm-row flex-column justify-content-between align-items-center">
+        <div class="p-3">
+            <h4 class="mb-3">with a social accout</h4>
+            <button class="btn btn-google-plus w100" (click)="socialLogin('google')">Sign in with Google</button><br>
+            <button class="btn btn-facebook mt-3 w100" (click)="socialLogin('facebook')">Sign in with Facebook</button><br>
+            <button class="btn btn-twitter mt-3 w100" (click)="socialLogin('twitter')">Sign in with Twitter</button>
+        </div>
+        <div class="align-middle">
+            OR
+        </div>
+        <div class="p-3">
+            <h4 class="mb-3">with a local accout</h4>
+            <form (ngSubmit)="onSubmit()" [formGroup]="loginForm">
+                <div class="form-group">
+                    <label class="sr-only" for="loginUsername">Username</label>
+                    <input class="form-control" id="loginUsername" type="text" placeholder="Username" formControlName="username">
+                </div>
+                <div class="form-group">
+                    <label class="sr-only" for="loginPassword">Password</label>
+                    <input class="form-control" id="loginPassword" type="password" placeholder="Password" formControlName="password">
+                </div>
+                <button class="btn btn-primary" type="submit" [disabled]="!loginForm.valid">Log in</button>
+            </form>
+        </div>
     </div>
-    <div class="form-group">
-        <label for="loginPassword">Password</label>
-        <input id="loginPassword" type="password" placeholder="Password" formControlName="password">
-    </div>
-    <button type="submit" [disabled]="!loginForm.valid">Login</button>
-</form>
+    <cmm-register></cmm-register>
+</div>
+
