--- a/src/app/login/register/register.component.html
+++ b/src/app/login/register/register.component.html
@@ -25,7 +25,12 @@
         </div>
         <div class="col-sm-10 offset-sm-2 form-control-feedback" *ngIf="hasError('password', ['required', 'minlength'])">Please choose a password with minimum 8 characters.</div>
     </div>
-
-    <re-captcha (resolved)="resolved($event)" siteKey="6LcvUh4UAAAAABYHX8ukRRfY3aOwieSerjR5HcGT"></re-captcha>
-    <button class="btn btn-primary" type="submit" [disabled]="!registerForm.valid">Register</button>
+    <div class="row mb-3">
+        <cmm-recaptcha class="col-sm-10 offset-sm-2" siteKey="6LcvUh4UAAAAABYHX8ukRRfY3aOwieSerjR5HcGT" (verify)="recaptchaVerify($event)"></cmm-recaptcha>
+    </div>
+    <div class="row">
+        <div class="col-sm-10 offset-sm-2">
+            <button class="btn btn-primary" type="submit" [disabled]="!registerForm.valid">Register</button>
+        </div>
+    </div>
 </form>
