--- a/src/app/board/thread-new/thread-new.component.html
+++ b/src/app/board/thread-new/thread-new.component.html
@@ -8,6 +8,6 @@
         <label for="threadMessage">Message</label>
         <textarea class="form-control" id="threadMessage" placeholder="Message" formControlName="message" rows="15"></textarea>
     </div>
-    <button class="btn btn-success" type="submit" [disabled]="!threadCreateForm.valid">Create</button>
+    <button class="btn btn-primary" type="submit" [disabled]="!threadCreateForm.valid">Create</button>
     <a class="btn btn-secondary" [routerLink]="['/board']" queryParamsHandling="preserve" role="button">Cancel</a>
 </form>
