--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,18 @@
 
 <div class="main-container d-flex flex-column justify-content-between align-items-stretch" style="min-height:100%">
-    <div>
+    <div [class.bg-white]="!fullHeader">
         <header>
-            <cmm-header></cmm-header>
+            <cmm-header *ngIf="fullHeader"></cmm-header>
+            <cmm-header-light *ngIf="!fullHeader"></cmm-header-light>
         </header>
     </div>
-    <div style="background-color: white; flex: 1">
+    <div class="bg-white" style="flex: 1">
         <main>
             <router-outlet></router-outlet>
         </main>
     </div>
     <div>
-        <footer>
+        <footer >
             Footer
         </footer>
     </div>
