--- a/src/app/board/post-create/post-create.component.html
+++ b/src/app/board/post-create/post-create.component.html
@@ -1,8 +1,8 @@
 <form (ngSubmit)="submit()" [formGroup]="postCreateForm">
     <div class="form-group">
         <label class="sr-only" for="postCreateInput{{ origin.id }}">Reply</label>
-        <textarea class="form-control" id="postCreateInput{{ origin.id }}" rows="15" formControlName="message" placeholder="Your reply here..."></textarea>
+        <textarea class="form-control" id="postCreateInput{{ origin.id }}" rows="15" formControlName="message" placeholder="Your reply here..." cmmAutofocus></textarea>
     </div>
-    <button class="btn btn-success" type="submit" [disabled]="!postCreateForm.valid">Send Reply</button>
+    <button class="btn btn-primary" type="submit" [disabled]="!postCreateForm.valid">Send Reply</button>
     <button class="btn btn-secondary" type="button" (click)="cancel()">Cancel</button>
 </form>
