--- a/src/app/board/vote-handle/vote-handle.component.html
+++ b/src/app/board/vote-handle/vote-handle.component.html
@@ -1,7 +1,7 @@
 <template #popContent>Operation Not Allowed!</template>
 <div class="vote-handle">
     <button type="button"
-            class="btn icon-button no-border-button"
+            class="btn icon-button-left no-border-button"
             [class.btn-outline-secondary]="voteData.own !== 1"
             [class.text-muted]="voteData.own !== 1"
             [class.btn-success]="voteData.own === 1"
@@ -12,7 +12,7 @@
                 <span>{{ voteData.plus }}</span>
     </button>
     <button type="button"
-            class="btn icon-button no-border-button"
+            class="btn icon-button-left no-border-button"
             [class.btn-outline-secondary]="voteData.own !== -1"
             [class.text-muted]="voteData.own !== -1"
             [class.btn-danger]="voteData.own === -1"
