--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,14 +1,12 @@
-<nav class="navbar navbar-light navbar-toggleable-xl bg-faded">
-      <a [routerLink]="['']" class="navbar-brand">SCOTI</a>
-      <div class="navbar-collapse collapse">
-          <form class="form-inline mx-auto w-75" (ngSubmit)="onSubmit()" [formGroup]="goToBoardForm">
-              <div class="input-group w-100">
-                  <input class="form-control" id="header_url_input" type="text" placeholder="Enter/Paste URL here" formControlName="url">
-                  <span class="input-group-btn">
-                      <button class="btn btn-secondary" type="submit" [disabled]="!goToBoardForm.valid">Go!</button>
-                  </span>
-              </div>
-          </form>
-          <cmm-user-login-link></cmm-user-login-link>
-      </div>
+<nav class="p-3 width-limit d-flex flex-row justify-content-between align-items-center">
+    <a class="mr-3" [routerLink]="['']"><img src="assets/logo_small.png"></a>
+    <form class="form-inline mx-auto w-75 mr-3" (ngSubmit)="onSubmit()" [formGroup]="goToBoardForm">
+        <div class="input-group w-100">
+            <input class="form-control" id="header_url_input" type="text" placeholder="http:// ..." formControlName="url">
+            <span class="input-group-btn">
+                <button class="btn btn-secondary" type="submit" [disabled]="!goToBoardForm.valid">Go!</button>
+            </span>
+        </div>
+    </form>
+    <cmm-user-login-link></cmm-user-login-link>
 </nav>
