--- a/src/styles.less
+++ b/src/styles.less
@@ -29,7 +29,7 @@ html, body {
         position: absolute;
         left: 0.5rem;
         top: 50%;
-        margin-top: -0.75rem;
+        margin-top: -0.8rem;
     }
 }
 
@@ -96,6 +96,12 @@ html, body {
     border-radius: .5rem;
     &.btn-link {
         padding: 1rem 0;
+    }
+    .material-icons {
+        font-size: 2rem;
+    }
+    &.icon-button-left {
+        padding-left: 3rem;
     }
 }
 
