--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,13 +1,10 @@
-<a class="btn btn-link btn-xlg no-border-button mr-3" [routerLink]="['/board']" queryParamsHandling="preserve">
-  {{ board?.site.netloc }}
-  <span class="text-muted">{{ board?.path }}</span>
+<a class="btn btn-link btn-xlg no-border-button icon-button-left mr-3" [routerLink]="['/board']" queryParamsHandling="preserve">
+    <i class="material-icons">bookmark</i>
+    <span>{{ board?.site.netloc }}{{ board?.path }}</span>
 </a>
-<a class="btn btn-outline-primary icon-button-right" [attr.href]="board.url" target="_blank">
+<a class="btn btn-outline-primary icon-button-right no-border-button mt-1" [attr.href]="board.url" target="_blank">
     <span>Open</span>
     <i class="material-icons">chevron_right</i>
 </a>
 <hr>
 <router-outlet></router-outlet>
-<!--
-<cmm-thread-list [boardId]="board?.id"></cmm-thread-list>
--->
