--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,10 @@
 <nav class="p-3 width-limit d-flex flex-row justify-content-between align-items-center">
     <a class="mr-3" [routerLink]="['']"><img src="assets/logo_small.png"></a>
     <form class="form-inline mx-auto w-75 mr-3" (ngSubmit)="onSubmit()" [formGroup]="goToBoardForm">
-        <div class="input-group w-100">
+        <div class="input-group input-group-lg w-100">
             <input class="form-control" id="header_url_input" type="text" placeholder="http:// ..." formControlName="url">
             <span class="input-group-btn">
-                <button class="btn btn-secondary" type="submit" [disabled]="!goToBoardForm.valid">Go!</button>
+                <button class="btn btn-primary" type="submit" [disabled]="!goToBoardForm.valid">Go!</button>
             </span>
         </div>
     </form>
