--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="my-5 py-5 text-center">
-    <img src="assets/logo_big.png">
+    <img src="assets/logo.svg" width="500px">
 </div>
 <form id="url-search-form" (ngSubmit)="onSubmit()" [formGroup]="goToBoardForm">
     <div class="form-group w-100">
