--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 
 <div class="main-container d-flex flex-column justify-content-between align-items-stretch" style="min-height:100%">
-    <div [class.bg-white]="!fullHeader">
+    <div [class.bg-white]="!fullHeader" [class.bg-light]="fullHeader">
         <header>
             <cmm-header *ngIf="fullHeader"></cmm-header>
             <cmm-header-light *ngIf="!fullHeader"></cmm-header-light>
@@ -11,7 +11,7 @@
             <router-outlet></router-outlet>
         </main>
     </div>
-    <div>
+    <div class="bg-dark">
         <footer >
             Footer
         </footer>
