--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,5 +1,5 @@
 main, header, footer, nav {
-    max-width: 1140px;
+    max-width: 960px;
     margin: auto;
 }
 
@@ -7,10 +7,16 @@ main, footer {
     padding: 10px;
 }
 
-main {
-
-}
 
 .bg-white {
     background-color: white;
+}
+
+.bg-light {
+    background-color: #efefef;
+}
+
+.bg-dark {
+    background-color: #525252;
+    color: white;
 }
