--- a/src/app/board/post/post.component.html
+++ b/src/app/board/post/post.component.html
@@ -1,15 +1,16 @@
 <article class="post my-2">
     <div class="post-main">
         <div class="d-flex flex-row pb-2">
-            <div class="post-sidebar">
-                <cmm-user-label [user]="post.creator"
-                                [date]="post.created">
-                </cmm-user-label>
+            <div class="post-sidebar pt-1">
+                <cmm-user-label [user]="post.creator"></cmm-user-label>
+                <cmm-vote-handle [voteData]="post.voteData"></cmm-vote-handle>
             </div>
             <div class="d-flex flex-column justify-content-between w-100">
-                <cmm-who-and-when class="px-3" [user]="post.creator" [date]="post.created"></cmm-who-and-when>
-                <h4 *ngIf="title" class="px-3 mb-2 mt-3 light-weight">{{ title }}</h4>
-                <div class="post-content px-3 py-2" [innerHtml]="post.text | autoLinks"></div>
+                <div class="px-3" >
+                    <cmm-who-and-when [user]="post.creator" [date]="post.created"></cmm-who-and-when>
+                    <h4 *ngIf="title" class="mb-2 mt-3 light-weight">{{ title }}</h4>
+                    <div class="post-content py-2" [innerHtml]="post.text | autoLinks"></div>
+                </div>
                 <div class="post-controls px-3 py-1 d-flex flex-row">
                     <div class="align-self-start" *ngIf="post.numberOfChildren > 0 && !externalChildHandling">
                         <button class="btn btn-outline-primary icon-button-left no-border-button toggle-button" [class.open]="childrenVisible" (click)="toggleChildren()">
@@ -40,7 +41,7 @@
             </cmm-post-edit>
         </div>
     </div>
-    <div class="post-children pl-5 ml-5" *ngIf="childrenVisible && post.numberOfChildren > 0 && !externalChildHandling">
+    <div class="post-children" *ngIf="childrenVisible && post.numberOfChildren > 0 && !externalChildHandling">
         <cmm-post
             *ngFor="let childPost of children"
             [post]="childPost"
