--- a/src/app/board/vote-handle/vote-handle.component.less
+++ b/src/app/board/vote-handle/vote-handle.component.less
@@ -1,8 +1,9 @@
 .vote-handle {
     display: inline-block;
-    button {
-        &.selected {
-            background-color: deeppink;
+    .vote-indicator {
+        height: 2px;
+        > div {
+            height: 100%;
         }
     }
 }
