--- a/src/app/shared/who-and-when/who-and-when.component.html
+++ b/src/app/shared/who-and-when/who-and-when.component.html
@@ -1,6 +1,6 @@
 <div>
     <i class="material-icons tiny text-success align-middle" *ngIf="loggedInUser?.id === user.id">fiber_manual_record</i>
-    <a [routerLink]="['/user']"><small>{{ user.name }}</small></a>
+    <a [routerLink]="['/user', user.id]"><small>{{ user.name }}</small></a>
     <span>-</span>
-    <small>{{ date | elapsed }}</small>
+    <small placement="top" [ngbTooltip]="date | date: 'short'">{{ date | elapsed }}</small>
 </div>
