--- a/src/styles.less
+++ b/src/styles.less
@@ -34,6 +34,10 @@ hr {
     cursor: pointer;
 }
 
+.icon-button {
+    padding: 0.25rem 0.5rem 0 0.5rem;
+}
+
 .icon-button-left {
     padding-left: 2.5rem;
     position: relative;
@@ -130,4 +134,26 @@ hr {
 
 .break-all {
     word-break: break-all;
+}
+
+.no-wrap {
+    white-space: nowrap;
+}
+
+.bg-white {
+    background-color: white;
+}
+
+.bg-light {
+    background-color: #efefef;
+}
+
+.bg-dark {
+    background-color: #525252;
+    color: white;
+}
+
+
+label {
+    color: #636c72;
 }
