--- a/src/app/board/post/post.component.less
+++ b/src/app/board/post/post.component.less
@@ -14,6 +14,10 @@
         white-space: pre-wrap;
     }
 
+    .post-children {
+        margin-left: 70px;
+    }
+
     .post-extend {
         position: relative;
         &::before {
