--- a/src/app/board/vote-handle/vote-handle.component.html
+++ b/src/app/board/vote-handle/vote-handle.component.html
@@ -1,25 +1,28 @@
-<template #popContent>Operation Not Allowed!</template>
-<div class="vote-handle">
-    <button type="button"
-            class="btn icon-button-left no-border-button"
-            [class.btn-outline-secondary]="voteData.own !== 1"
-            [class.text-muted]="voteData.own !== 1"
-            [class.btn-success]="voteData.own === 1"
-            (cmmClickIfAuth)="voteUp()">
-                <i class="material-icons"
-                   [class.text-success]="voteData.own !== 1"
-                   [class.text-white]="voteData.own === 1">arrow_drop_up</i>
-                <span>{{ voteData.plus }}</span>
-    </button>
-    <button type="button"
-            class="btn icon-button-left no-border-button"
-            [class.btn-outline-secondary]="voteData.own !== -1"
-            [class.text-muted]="voteData.own !== -1"
-            [class.btn-danger]="voteData.own === -1"
-            (cmmClickIfAuth)="voteDown()">
-                <i class="material-icons"
-                   [class.text-danger]="voteData.own !== -1"
-                   [class.text-white]="voteData.own === -1">arrow_drop_down</i>
-                <span>{{ voteData.minus }}</span>
-    </button>
+<div class="vote-handle w-100 mt-1">
+    <div class="vote-indicator bg-light">
+        <div class="bg-primary" [style.width]="voteData.plus / (voteData.plus + voteData.minus) * 100 + '%'">
+
+        </div>
+    </div>
+    <div class="text-center text-primary"
+         placement="top"
+         [ngbTooltip]="'+' + voteData.plus + ' / -' + voteData.minus">
+         <small class="no-wrap">{{ voteData.plus }} - {{ voteData.minus }}</small>
+    </div>
+    <div class="d-flex flex-row justify-content-between">
+        <button type="button"
+                class="btn no-border-button icon-button btn-outline-primary"
+                [class.text-light]="voteData.own !== 1"
+                (cmmClickIfAuth)="voteUp()">
+                    <i class="material-icons">thumb_up</i>
+        </button>
+        <button type="button"
+                class="btn no-border-button icon-button btn-outline-primary"
+                [class.text-light]="voteData.own !== -1"
+                (cmmClickIfAuth)="voteDown()">
+                    <i class="material-icons">thumb_down</i>
+        </button>
+    </div>
+
+
 </div>
