--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,17 +1,18 @@
-<h3 class="text-sm-center mt-3 mx-3">Log in</h3>
+
 <div class="narrow mx-auto">
+    <h3 class="mt-3 px-3 py-2 text-muted bg-light light-weight">Log in</h3>
     <div class="d-flex flex-sm-row flex-column justify-content-between align-items-sm-center align-items-stretch">
         <div class="p-3">
-            <h4 class="mb-3">with a social accout</h4>
+            <h4 class="mb-3 light-weight">with a social accout</h4>
             <button class="btn btn-google-plus w100" (click)="socialLogin('google')">Sign in with Google</button><br>
             <button class="btn btn-facebook mt-3 w100" (click)="socialLogin('facebook')">Sign in with Facebook</button><br>
             <button class="btn btn-twitter mt-3 w100" (click)="socialLogin('twitter')">Sign in with Twitter</button>
         </div>
         <div class="align-middle">
-            <h4 class="text-center">or</h4>
+            <h4 class="text-center light-weight">or</h4>
         </div>
         <div class="p-3">
-            <h4 class="mb-3">with a local accout</h4>
+            <h4 class="mb-3 light-weight">with a local accout</h4>
             <form (ngSubmit)="onSubmit()" [formGroup]="loginForm">
                 <div class="form-group">
                     <label class="sr-only" for="loginUsername">Username</label>
@@ -25,8 +26,7 @@
             </form>
         </div>
     </div>
-    <hr>
-    <h3 class="text-sm-center mt-3 mx-3">Register local account</h3>
+    <h3 class="mt-5 px-3 py-2 text-muted bg-light light-weight">Register local account</h3>
     <cmm-register></cmm-register>
 </div>
 
