--- a/src/app/login/register/register.component.html
+++ b/src/app/login/register/register.component.html
@@ -1,28 +1,50 @@
 <form (ngSubmit)="onSubmit()" [formGroup]="registerForm" class="p-3">
-    <div class="form-group row" [class.has-success]="isValid('username')" [class.has-danger]="isInvalid('username')">
+    <div class="form-group row"
+         [class.has-success]="forms.isValid(registerForm, 'username')"
+         [class.has-danger]="forms.isInvalid(registerForm, 'username')">
         <label class="col-sm-2 col-form-label" for="registerUsername">Username</label>
         <div class="col-sm-10">
-            <input class="form-control" [class.form-control-danger]="isInvalid('username')" [class.form-control-success]="isValid('username')" id="registerUsername" type="text" placeholder="Username" formControlName="username">
+            <input class="form-control" id="registerUsername"
+                   type="text" placeholder="Username" formControlName="username"
+                   [class.form-control-danger]="forms.isInvalid(registerForm, 'username')"
+                   [class.form-control-success]="forms.isValid(registerForm, 'username')">
         </div>
-        <div class="col-sm-10 offset-sm-2 form-control-feedback" *ngIf="hasError('username', ['required', 'minlength', 'maxlength'])">Please choose a username between 3 and 32 characters.</div>
-        <div class="col-sm-10 offset-sm-2 form-control-feedback" *ngIf="hasError('username', ['userUnique'])">This username is already taken.</div>
+        <div class="col-sm-10 offset-sm-2 form-control-feedback"
+             *ngIf="forms.hasError(registerForm, 'username', ['required', 'minlength', 'maxlength'])">Please choose a username between 3 and 32 characters.</div>
+        <div class="col-sm-10 offset-sm-2 form-control-feedback"
+             *ngIf="forms.hasError(registerForm, 'username', ['userUnique'])">This username is already taken.</div>
     </div>
-    <div class="form-group row" [class.has-success]="isValid('email')" [class.has-danger]="isInvalid('email')">
+    <div class="form-group row"
+         [class.has-success]="forms.isValid(registerForm, 'email')"
+         [class.has-danger]="forms.isInvalid(registerForm, 'email')">
         <label class="col-sm-2 col-form-label" for="registerEmail">Email</label>
         <div class="col-sm-10">
-            <input class="form-control" [class.form-control-danger]="isInvalid('email')" [class.form-control-success]="isValid('email')" id="registerEmail" type="email" placeholder="you@example.com" formControlName="email">
+            <input class="form-control" id="registerEmail"
+                   type="email" placeholder="you@example.com" formControlName="email"
+                   [class.form-control-danger]="forms.isInvalid(registerForm, 'email')"
+                   [class.form-control-success]="forms.isValid(registerForm, 'email')">
         </div>
-        <div class="col-sm-10 offset-sm-2 form-control-feedback" *ngIf="hasError('email', ['required', 'email'])">Please enter a valid email address.</div>
+        <div class="col-sm-10 offset-sm-2 form-control-feedback"
+             *ngIf="forms.hasError(registerForm, 'email', ['required', 'email'])">Please enter a valid email address.</div>
     </div>
-    <div class="form-group row" [class.has-success]="isValid('password')" [class.has-danger]="isInvalid('password')">
+    <div class="form-group row"
+         [class.has-success]="forms.isValid(registerForm, 'password')"
+         [class.has-danger]="forms.isInvalid(registerForm, 'password')">
         <label class="col-sm-2 col-form-label" for="registerPassword">Password</label>
         <div class="col-sm-10">
-            <input class="form-control" [class.form-control-danger]="isInvalid('password')" [class.form-control-success]="isValid('password')" id="registerPassword" type="password" formControlName="password">
+            <input class="form-control" id="registerPassword"
+                   type="password" formControlName="password"
+                   [class.form-control-danger]="forms.isInvalid(registerForm, 'password')"
+                   [class.form-control-success]="forms.isValid(registerForm, 'password')">
         </div>
-        <div class="col-sm-10 offset-sm-2 form-control-feedback" *ngIf="hasError('password', ['required', 'minlength'])">Please choose a password with minimum 8 characters.</div>
+        <div class="col-sm-10 offset-sm-2 form-control-feedback"
+             *ngIf="forms.hasError(registerForm, 'password', ['required', 'minlength'])">Please choose a password with minimum 8 characters.</div>
     </div>
     <div class="row mb-3">
-        <cmm-recaptcha class="col-sm-10 offset-sm-2" siteKey="6LcvUh4UAAAAABYHX8ukRRfY3aOwieSerjR5HcGT" (verify)="recaptchaVerify($event)"></cmm-recaptcha>
+        <cmm-recaptcha class="col-sm-10 offset-sm-2"
+                       siteKey="6LcvUh4UAAAAABYHX8ukRRfY3aOwieSerjR5HcGT"
+                       (verify)="recaptchaVerify($event)">
+        </cmm-recaptcha>
     </div>
     <div class="row">
         <div class="col-sm-10 offset-sm-2">
