--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,3 +1,6 @@
-<p>
-  user works!
-</p>
+<a class="btn btn-link btn-xlg no-border-button text-muted light-weight icon-button-left mr-3" [routerLink]="['/user', user?.id]" queryParamsHandling="preserve">
+    <i class="material-icons text-light">person</i>
+    <span class="break-all">{{ user?.name }}</span>
+</a>
+<hr>
+
